@@ -1,2 +1,2 @@
 #!/bin/sh
-../../bin/pyjsbuild --cache-buster --multi-file --strict $@ LibTest
+../../bin/pyjsbuild --cache-buster --strict $@ LibTest
