@@ -1,0 +1,8 @@
+
+
+def getClientHeight():
+    return JS('$doc.body.clientHeight');
+
+def getClientWidth():
+    return JS('$doc.body.clientWidth');
+
